Fix spacings

--- a/frontend/src/modules/home/components/AddBoard/AddBoard.module.scss
+++ b/frontend/src/modules/home/components/AddBoard/AddBoard.module.scss
@@ -2,7 +2,7 @@
 
 .root {
   width: 22rem; // Card width
-  margin: 2rem auto 0 auto;
+  margin: 0 auto 2rem auto;
 
   .header {
     padding-bottom: 0;
