--- a/frontend/src/modules/home/components/Board/Board.module.scss
+++ b/frontend/src/modules/home/components/Board/Board.module.scss
@@ -1,6 +1,5 @@
 .root {
-  margin: 1rem 0.8rem; // Spacing between boards
-  flex: 0 0 21%;
+  margin-bottom: 2rem;
   cursor: pointer;
 
   .card {
